Solved : menu-panel's scrollbar is visible when not needed

--- a/css/header.css
+++ b/css/header.css
@@ -79,7 +79,7 @@
   font-size: 3em;
   bottom: 0;
   left: 5rem;
-  overflow-y: scroll;
+  overflow-y: auto;
   padding: 1em;
   position: absolute;
   top: 0;
